[package]
name = "screeps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.57"
lazy_static = "1.4.0"
serde = {version = "1.0", features = ["derive"] }
wasm-bindgen = {version = "0.2.80", features = ["serde-serialize"]}
